# Evaonline_Temp

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  00_LEIA_PRIMEIRO.md  ANALISE_MELHORIAS_CACHE_FAVORITOS.md  ARQUITETURA_COMPLETA.md  AUDITORIA_DETALHADA_SERVICOS.md  AUDITORIA_FASES_3_4_5.md  AUDITORIA_FINAL_COMPLETA.md  AUDITORIA_REVISAO_SERVICES_COMPLETA.md  AUDITORIA_ROTAS_COMPLETA.md  AUDITORIA_VISUAL_REDUNDANCIAS.md  CHECKLIST_FASE_0.2_ROUTES.md  CONCLUSAO.md  DATABASE_MIGRATIONS.md  DECISAO_CONTINUAR_OU_LIMPAR.md  DECISAO_PRIORIDADES_PROXIMOS_PASSOS.md  DECISAO_SIMPLES.md  DEPLOYMENT_ANALYSIS.md  DEPLOYMENT_SUMMARY.txt  DIAGRAMA_PROBLEMAS_ROTAS.md  DOCKER_ARCHITECTURE_DETAILED.md  DOCKER_ARCHITECTURE_EXPLAINED.md  DOCKER_OPTIMIZATION_GUIDE.md  DOCUMENTACAO_FINAL_SERVICES.md  Dockerfile  ESTRUTURA_BANCO_DADOS.md  ESTRUTURA_VISUAL_SERVICES.md  FASE_0.2_OPÇÃO_B_RESUMO.md  FASE_3_PROGRESSO_FINAL.md  FASE_3_RESUMO.md  GUIA_COMPLETO.md  GUIA_PASSO_11_14_FRONTEND_TESTES.md  GUIA_PASSO_7_9_POSTGIS_TESTES_COMMIT.md  HOSTING_PRICE_COMPARISON.md  INDICE_DOCUMENTOS.md  OPCOES_REFATORACAO_ROTAS.md  OTIMIZACAO_REQUIREMENTS.md  PHASE_3_5_3_5_CLEANUP_TRANSLATION_COMPLETE.md  (+48 more)
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_add_postgis_geometry.py  001_create_initial_tables.py  002_add_cache_favorites_tables.py  002_add_visitor_stats.py  20251023_create_climate_history_tables.py
assets/: dashExtensions_default.js
assets/css/: styles.min.css
backend/: __init__.py  main.py
backend/database/: __init__.py  connection.py  data_storage.py  redis_pool.py  session_database.py
backend/infrastructure/: __init__.py  visitor_tracking.py
backend/tests/: README.md  __init__.py  conftest.py  pytest.ini  run_tests.py
config/settings/: __init__.py  app_settings.py  development.py  production.py
config/translations/: en.json  pt.json
data/csv/: CITIES_MATOPIBA_337.csv  CITY_PIRACICABA_SP.csv  worldcities.csv  worldcities_with_elevation.csv
database/: README.md
database/config/: pg_hba_extra.conf
database/init/: init_alembic.py
docker/: docker-compose.override.example.yml
docker/backend/: Dockerfile  entrypoint.sh
docker/monitoring/: prometheus.yml
docker/nginx/: Dockerfile  nginx.conf
docs/: ASYNC_MIGRATION_PLAN.md  CLEANUP_COMPLETED.md  CLEANUP_OPENMETEO_REFERENCES.md  CLEANUP_PLAN.md  CLIMATE_SOURCES_ARCHITECTURE.md  CONFIG_REVIEW.md  CORRECTIONS_SUMMARY.md  CORRECT_APIs_HISTORICAL_VS_FORECAST.md  CSS_DESIGN_SYSTEM.md  DATABASE_README.md  DOCKER_PROFILES.md  ELEVATION_DATA_STORAGE.md  ELEVATION_DOWNLOAD_GUIDE.md  ELEVATION_PROCESSING_STATUS.md  ENSEMBLE_KALMAN_FUSION.md  FOOTER_RESPONSIVENESS_ANALYSIS.md  IMPROVEMENTS_SUMMARY.md  LICENSE_AND_RATE_LIMITING.md  MIGRATION_STATUS_ELEVATION_API.md  MONITORING.md  MONITORING_ARCHITECTURE.md  MONITORING_QUICKSTART.md  MUNDIAL_MAP_SOURCE_SELECTION.md  NASA_POWER_MIGRATION_COMPLETED.md  PHASE1_HTTP_CLIENTS_COMPLETED.md  PROJECT_STRUCTURE.md  QUICKSTART.md  RATE_LIMITING_CORRECTED.md  RATE_LIMITING_EXPLAINED.md  RATE_LIMIT_RECOVERY.md  REFACTOR_UX_SOURCES_TO_ETO_PAGE.md  REQUIREMENTS.md  REQUIREMENTS_CONSOLIDATION.md  ROADMAP.md  STATUS_ATUAL_MIGRACAO.md  STEP4_GEOGRAPHIC_SELECTION_COMPLETED.md  TABS_IMPLEMENTATION.md  TESTE_MAPA_MUNDIAL.md  TESTE_MARCADORES_MUNDIAIS.md  TESTE_VISUAL_TABS.md  (+4 more)
docs/features/: README.md
docs/guides/: DOCKER_TESTING_GUIDE.md  GRAFANA_README.md  README.md  REDIS_MANUAL_SETUP.md  REDIS_VSCODE_GUIDE.md
docs/maintenance/: CLEANUP_PLAN.md  README.md
docs/setup/: CELERY_REDIS_SETUP.md
frontend/: app.py
frontend/callbacks/: __init__.py  cache_callbacks.py  climate_callbacks.py  eto_callbacks.py  eto_v3_callbacks.py  favorites_callbacks.py  language_callbacks.py  map_callbacks.py  navigation_callbacks.py
frontend/components/: __init__.py  climate_source_selector.py  favorite_button.py  footer.py  language_switcher.py  navbar.py  progress_card.py  world_map_tabs.py
frontend/layouts/: __init__.py
frontend/pages/: about.py  admin_page.py  dash_eto.py  documentation.py  home.py
frontend/templates/: custom_layer.html
frontend/utils/: __init__.py  coordinates.py  elevation.py  matopiba.py  websocket_handler.py
init-db/: 02-install-postgis.sh  99-configure-pg-hba.sh
monitoring/: prometheus.yml
reports/cities/: report_Addis_Ababa_Ethiopia.json  report_Alvorada_do_Gurgueia_PI.json  report_Araguaina_TO.json  report_Balsas_MA.json  report_Barreiras_BA.json  report_Bom_Jesus_PI.json  (+21 more)
requirements/: README.md  base.txt  development.txt  production.txt
scripts/: add_elevation_batch.py  add_elevation_to_cities.py  add_elevation_to_cities_simple.py  check_coordinates.py  check_redis_validation.py  check_specific_issues.py  comprehensive_audit.py  continue_elevation_batch.py  diagnose_project.ps1  diagnose_project.py  docker_rebuild.ps1  import_world_locations.py  load_data_to_pg.py  manage.bat  manage.sh  manage_celery_redis.ps1  manage_db.py  requirementx.txt  run_at_1920.ps1  run_full_test_suite.py  run_tests.ps1  stop_windows_postgres.ps1  test_all_endpoints.py  test_api.py  test_e2e.py  test_redis.py  test_redis_connection.py  verify_fixes.py
tests/: conftest.py
utils/: __init__.py  data_utils.py  get_translations.py  language_manager.py  logging.py  session_utils.py  static_resources.py  translation_service.py  websocket_client.py
(+169 files in other folders)
